--- a/bassshop/src/navbar.css
+++ b/bassshop/src/navbar.css
@@ -12,6 +12,7 @@ justify-content: center;
 .logo-img{
     width: 32px;
     height: 48px;
+    padding-top: 4.6px;
 }
 .input-text {
     border: none;
@@ -43,6 +44,7 @@ justify-content: center;
 }
 
 .name {
+    padding-left: 1px;
     font-size: 28px;
     font-family: 'Exo 2', sans-serif;
     font-weight: 700; 
@@ -92,5 +94,52 @@ justify-content: center;
 .profile-button img {
     width: 30px;
     height: 30px;
+}
+
+.categories-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    border-bottom: 1px solid #E5E5E5;
+}
+
+.categories-list {
+    display: flex;
+    gap: 179px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.category-item {
+    font-family: 'Exo 2', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #2A2A2A;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.category-item:hover {
+    color: #000000;
+    font-weight: 500;
+}
+
+.category-item.active {
+    color: #000000;
+    font-weight: 700;
+    position: relative;
+}
+
+.category-item.active::after {
+    content: '';
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #000000;
 }
 
