--- a/bassshop/src/App.css
+++ b/bassshop/src/App.css
@@ -1,42 +1,90 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+
+.main-container-wrapper{
+  margin-top: 42px;
+  display: flex;
+  justify-content: center;
+}
+.main-container{
+  display: flex;
+}
+.left{
+  display: flex;
+  width: 468px;
+  height: 468px;
+  border-radius: 30px;
+  background-color: #D9D9D9;
+}
+.main-container-left-img{
+  margin-top: 40px;
+  margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+.main-container-text{
+  font-size: 30px;
+  font-weight: 700;
+  color: #000000;
+  font-family: 'Exo 2', sans-serif;
+  margin-top: 39px;
+  margin-left: 30px;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 100%;
+  font-weight: 900;
+}
+.main-container-left-img-second{
+  margin-top: 39px;
+  margin-left: -17px;
+  display: flex;
+  justify-content: flex-end;
+}
+.main-container-middle{
+  width: 468px;
+  height:219px;
+  background-color: #D9D9D9;
+  border-radius: 30px;
+  margin-left: 30px;
+}
+.middle{
+  margin-bottom: 30px;
+  display: flex;
+  width: 468px;
+  height: 219px;
+  background-color: #D9D9D9;
+  border-radius: 30px;
+}
+.main-container-middle-img{
+  margin-top: -15px;
+  margin-left: auto;
+  width: 216px;
+  height: 277px;
+  display: flex;
+  justify-content: flex-end;
+}
+.right{
+  width: 344px;
+  height: 302px;
+  background-color: #D9D9D9;
+  border-radius: 30px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+.scissors-img{
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-bottom: 27px;
+
+}
+.scissors-text{
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
+  font-family: 'Exo 2', sans-serif;
+  margin-left: 30px;
+  padding: 0;
+  margin-top: 0;
+  word-wrap: break-word;
+  max-width: 80%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
