--- a/bassshop/src/styles/navbar.css
+++ b/bassshop/src/styles/navbar.css
@@ -26,6 +26,11 @@ justify-content: center;
     font-size: 20px;
     font-family: 'Exo 2', sans-serif;
     outline: none;
+    
+}
+.input-text:focus{
+    position: relative;
+    z-index: 10;
 }
 .input-cont{
     margin-left: 8px;
@@ -42,6 +47,7 @@ justify-content: center;
     transform: translateY(-50%);
     width: 20px;
     height: 20px;
+    z-index: 200;
     pointer-events: none;
 }
 
@@ -73,6 +79,10 @@ justify-content: center;
     background-color: white;
     color: #000000;
 }
+.contacts-button-text:hover{
+    background-color: #D9D9D9;
+    transition: background-color 0.3;
+}
 .contacts{
     display: flex;
     
@@ -85,6 +95,7 @@ justify-content: center;
     align-items: center;
     width: 30px;
     border-radius: 4px;
+    cursor: pointer;
 }
 .favorites-button,.cart-button,.profile-button{
     margin-left: 21px;
@@ -107,6 +118,7 @@ justify-content: center;
     height: 50px;
     width: 100%;
 }
+
 
 .categories-list {
     display: flex;
@@ -153,7 +165,28 @@ ul{
     transform-origin: bottom left;
 }
 
-/* Добавляем медиа-запросы для адаптивности */
+/* Overlay for darkening the background when input is focused */
+.search-wrapper::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+    z-index: 5;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    pointer-events: none;
+}
+
+.search-wrapper:focus-within::before {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* Адаптив*/
 @media (max-width: 1380px) {
     .navbar {
         width: 95%;
@@ -268,6 +301,4 @@ ul{
         height: 25px;
     }
 }
-
-
 
