all navbar and main page routes. categories bass-guitar

--- a/bassshop/src/styles/App.css
+++ b/bassshop/src/styles/App.css
@@ -6,6 +6,7 @@
   justify-content: center;
   padding: 0 20px;
   margin-bottom: 30px;
+
 }
 
 .main-container {
@@ -53,8 +54,9 @@
   white-space: normal;
   z-index: 1;
   position: relative;
+  text-decoration: none !important;
+  
 }
-
 .main-container-middle {
   display: flex;
   flex-direction: column;
